# Numeric_Methods

./: README.md
Benchmark_task/: CMakeLists.txt  report.txt
Benchmark_task/inc/: benchlib.hpp
Benchmark_task/src/: main.cpp
Fifth_task/: report.txt  rng_validation.csv
Fifth_task/inc/: rng_validation.hpp
Fifth_task/src/: main.cpp
First_task/: YouTubeRec.txt  benchmark.txt
Fourth_task/: CMakeLists.txt  conclusion.txt  pi_calculation.txt  pi_calculation_seed_42.txt
Fourth_task/inc/: monte_carlo_pi.hpp
Fourth_task/src/: main.cpp
Log_task/: CMakeLists.txt  analysis.csv  dump.txt
Log_task/inc/: loglib.hpp  sollya_reference.sollya  tables.hpp
Log_task/src/: loglib.cpp  main.cpp
Log_task/verification/: tests.cpp  verification.cpp
Second_task/: CMakeLists.txt  report13.txt  report14.txt
Second_task/inc/: american_option.hpp  option_lib.hpp  option_parameters.hpp  utils.hpp
Second_task/src/: main.cpp
Seventh_task/: CMakeLists.txt  matmul.cl  report.txt
Seventh_task/inc/: config.hpp  matrix.hpp  utils.hpp
Seventh_task/src/: main.cpp
Tenth_task/: CMakeLists.txt  minstdres.txt  report.txt
Tenth_task/inc/: tests.hpp
Tenth_task/src/: main.cpp  tests.cpp
Third_task/: .~lock.precision_results.csv#  CMakeLists.txt  conclusion.txt  plots.py  precision_results.csv
Third_task/inc/: test_utils.hpp
Third_task/src/: main.cpp
